--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@ html {
   background-image: url("bg.png");
   background-repeat: repeat;
 }
+#pane {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  border: 2px;
+  border-color: red;
+}
+
+#box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
