--- a/style.css
+++ b/style.css
@@ -3,11 +3,8 @@ html {
   background-repeat: repeat;
 }
 
-.image-continer {
+.img {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 
