I DID IT!!! I FIXED THE BACKGROUND ONCE AND FOR ALL!!!!!!!!!!!!!!!!!!!

--- a/l2Style.css
+++ b/l2Style.css
@@ -7,5 +7,5 @@
   body.l2 {
     height: 100%;
     overflow: hidden;
-    background-image: url("bg.png")  
+    background-image: url("caveBg.png")  
   }
