made enemy for base collision

--- a/l2Style.css
+++ b/l2Style.css
@@ -7,3 +7,8 @@ body.l2 {
     overflow: hidden;
     background-image: url("caveBg.png")  
   }
+#nme1 {
+  position: absolute;
+  left: 50%;
+  top: 90%;
+}
