--- a/L2/l2Style.css
+++ b/L2/l2Style.css
@@ -8,8 +8,8 @@ body.l2 {
   }
 #nme1 {
   position: absolute;
-  left: 50%;
-  top: 70%;
+  left: 40%;
+  top: 60%;
 }
 #nme {
   width: 80%;
@@ -18,6 +18,17 @@ body.l2 {
 
 #imgBeta {
   position: absolute;
-  left: 50%;
-  top: 70%;
+  left: 47%;
+  top: 60%;
+}
+
+#door {
+  position: absolute;
+  top: 85.6%;
+  left: 40%;
+}
+
+#doorimg {
+  width: 150%;
+  height: 150%;
 }
