--- a/L1/style.css
+++ b/L1/style.css
@@ -29,7 +29,7 @@ body.l1 {
   height: 80%;
 }
 
-#invWeapon {
+.invSlot {
   background-color: rgba(20, 20, 20, 0.75);
   background-repeat:no-repeat;
   background-size:47%;
