--- a/L2/l2Style.css
+++ b/L2/l2Style.css
@@ -38,4 +38,9 @@ body.l2 {
   background-repeat:no-repeat;
   background-size:47%;
   background-position: center;
+  background-repeat: no-repeat;
+}
+
+#slot1 {
+  background-image: url('../InventoryAssets/Key-trimmy.png');
 }
